Added CoffeeScript Files

--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "?.git"
+    "url": "https://github.com/lamarpierce/workflows.git"
   },
   "author": "Lamar Pierce",
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-coffee": "^3.0.2",
     "gulp-util": "^3.0.8"
   }
 }
