--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Lamar Pierce",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^5.1.4",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-coffee": "^3.0.2",
