--- a/package.json
+++ b/package.json
@@ -13,16 +13,23 @@
   "author": "Lamar Pierce",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
     "cross-env": "^5.1.4",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
     "gulp-browserify": "^0.5.1",
     "gulp-coffee": "^3.0.2",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.5.0",
+    "gulp-if": "^2.0.2",
+    "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "jquery": "^3.3.1",
     "mustache": "^2.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony"
+  }
 }
